force-app/main/default/objects/Service__c/fields/Amount_of_UOS__c.field-meta.xml
<CustomField>
    <fullName>Amount_of_UOS__c</fullName>
    <inlineHelpText>Optionally used to further describe the UOS or measurement unit. For example, Measurement Unit = Item, UOS Name = Groceries</inlineHelpText>
    <label>UOS Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>