force-app/main/default/objects/Service__c/fields/Approve_Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Approve_Progress_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Progress notes must be approved by supervisors.</description>
    <label>Approve Progress Notes</label>
    <type>Checkbox</type>
</CustomField>