force-app/main/default/objects/Service__c/fields/Default_Group_Notes_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Default_Group_Notes_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Group Notes Configuration</label>
    <referenceTo>ECM_Configuration__c</referenceTo>
    <relationshipLabel>Services (Default Group Notes Configuration)</relationshipLabel>
    <relationshipName>Default_Group_Notes_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>