force-app/main/default/objects/Service__c/fields/Default_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Code__c</fullName>
    <label>Default Service Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ABC</fullName>
            </value>
            <value>
                <fullName>CDE</fullName>
            </value>
            <value>
                <fullName>FGH</fullName>
            </value>
            <value>
                <fullName>IJK-XYZ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>