force-app/main/default/objects/Service__c/fields/Default_UOS_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_UOS_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>The default value used for new UOS created for this service.</inlineHelpText>
    <label>Default UOS Value</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>