force-app/main/default/objects/Service__c/fields/Measurement_Unit__c.field-meta.xml
<CustomField>
    <fullName>Measurement_Unit__c</fullName>
    <inlineHelpText>Measurement type for Units of Service</inlineHelpText>
    <label>Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Event / Meeting</fullName>
            </value>
            <value>
                <fullName>Fixed Time (Hours)</fullName>
            </value>
            <value>
                <fullName>Fixed Time (Minutes)</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Month</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Time (Hours)</fullName>
            </value>
            <value>
                <fullName>Time (Minutes)</fullName>
            </value>
            <value>
                <fullName>Transaction</fullName>
            </value>
            <value>
                <fullName>Visit</fullName>
            </value>
            <value>
                <fullName>Custom (Specify below)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>