force-app/main/default/objects/Service__c/fields/Program_Area__c.field-meta.xml
<CustomField>
    <fullName>Program_Area__c</fullName>
    <formula>TEXT( Program__r.Program_Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program Area</label>
    <type>Text</type>
</CustomField>