force-app/main/default/objects/Service__c/fields/Secure_Progress_Notes__c.field-meta.xml
<CustomField>
    <fullName>Secure_Progress_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Progress notes are read-only once submitted and can only be be edited by designated staff.</description>
    <label>Secure Progress Notes</label>
    <type>Checkbox</type>
</CustomField>