force-app/main/default/objects/Service__c/fields/Service_Area__c.field-meta.xml
<CustomField>
    <fullName>Service_Area__c</fullName>
    <label>Service Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Domain__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>(Semi-) Professional Performances and Events</fullName>
            </value>
            <value>
                <fullName>(Supplemental) Income Assistance</fullName>
            </value>
            <value>
                <fullName>Adult Arts Participation Services (Program)</fullName>
            </value>
            <value>
                <fullName>Adult Education</fullName>
            </value>
            <value>
                <fullName>Adult Workforce Development</fullName>
            </value>
            <value>
                <fullName>Arts Employment</fullName>
            </value>
            <value>
                <fullName>Arts Organization Residency Services</fullName>
            </value>
            <value>
                <fullName>Business Owner/ Manager Services</fullName>
            </value>
            <value>
                <fullName>Business Strip Services</fullName>
            </value>
            <value>
                <fullName>Child Care/Support</fullName>
            </value>
            <value>
                <fullName>Commercial Leasing</fullName>
            </value>
            <value>
                <fullName>Counseling &amp; Consultation</fullName>
            </value>
            <value>
                <fullName>Documentation</fullName>
            </value>
            <value>
                <fullName>Financial Counseling/ Coaching</fullName>
            </value>
            <value>
                <fullName>Health</fullName>
            </value>
            <value>
                <fullName>Houselift Energy Efficiency</fullName>
            </value>
            <value>
                <fullName>Houselift General Contracting</fullName>
            </value>
            <value>
                <fullName>Houselift Handyman Services</fullName>
            </value>
            <value>
                <fullName>Houselift Healthy Homes</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Legal Services</fullName>
            </value>
            <value>
                <fullName>Presenting Opportunities</fullName>
            </value>
            <value>
                <fullName>Retrofit Block-by-Block</fullName>
            </value>
            <value>
                <fullName>Room Rentals</fullName>
            </value>
            <value>
                <fullName>Technical Assistance</fullName>
            </value>
            <value>
                <fullName>Weatherization Assistance Program</fullName>
            </value>
            <value>
                <fullName>Youth Arts Participation Services</fullName>
            </value>
            <value>
                <fullName>Youth Education</fullName>
            </value>
            <value>
                <fullName>Youth Workforce Development</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>