force-app/main/default/objects/Service__c/fields/Service_Domain__c.field-meta.xml
<CustomField>
    <fullName>Service_Domain__c</fullName>
    <inlineHelpText>Services are grouped by Service Domain, Service Area/Category, and Service Name.</inlineHelpText>
    <label>Service Domain</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adjustment to Trauma</fullName>
            </value>
            <value>
                <fullName>Behavioral/Emotional Needs</fullName>
            </value>
            <value>
                <fullName>Culture</fullName>
            </value>
            <value>
                <fullName>Homelessness</fullName>
            </value>
            <value>
                <fullName>Housing</fullName>
            </value>
            <value>
                <fullName>Immigration</fullName>
            </value>
            <value>
                <fullName>Legal</fullName>
            </value>
            <value>
                <fullName>Life Domain Functioning</fullName>
            </value>
            <value>
                <fullName>School &amp; Education</fullName>
            </value>
            <value>
                <fullName>Workforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>