force-app/main/default/objects/Service__c/fields/Service_Entity__c.field-meta.xml
<CustomField>
    <fullName>Service_Entity__c</fullName>
    <label>Service Entity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Individual Client</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Organization</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>