force-app/main/default/objects/Service__c/fields/Service_Mode__c.field-meta.xml
<CustomField>
    <fullName>Service_Mode__c</fullName>
    <label>Service Mode</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Anonymous</fullName>
            </value>
            <value>
                <fullName>Not Enrolled</fullName>
            </value>
            <value>
                <fullName>Enrolled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>