force-app/main/default/objects/Service__c/fields/Service_Number__c.field-meta.xml
<CustomField>
    <fullName>Service_Number__c</fullName>
    <label>Service Number</label>
    <type>AutoNumber</type>
</CustomField>