force-app/main/default/objects/Service__c/fields/Service_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Short_Name__c</fullName>
    <externalId>true</externalId>
    <label>Service Short Name</label>
    <length>6</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>