force-app/main/default/objects/Service__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Case Management</fullName>
            </value>
            <value>
                <fullName>Defined Course Service</fullName>
            </value>
            <value>
                <fullName>Group / Class</fullName>
            </value>
            <value>
                <fullName>Walk-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>