force-app/main/default/objects/Service__c/fields/UOS_Description__c.field-meta.xml
<CustomField>
    <fullName>UOS_Description__c</fullName>
    <formula>&quot;Units of Service: &quot; + IF(NOT(ISBLANK(  Amount_of_UOS__c )), Amount_of_UOS__c, TEXT(Measurement_Unit__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Units of Service Description</label>
    <type>Text</type>
</CustomField>