force-app/main/default/objects/Service__c/fields/UOS_Hours__c.field-meta.xml
<CustomField>
    <fullName>UOS_Hours__c</fullName>
    <inlineHelpText>For UOS = Hours (Fixed)</inlineHelpText>
    <label>UOS Hours</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>