force-app/main/default/objects/Service__c/fields/UOS_Minutes__c.field-meta.xml
<CustomField>
    <fullName>UOS_Minutes__c</fullName>
    <inlineHelpText>For UOS = Minutes (Fixed)</inlineHelpText>
    <label>UOS Minutes</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>