force-app/main/default/objects/Service__c/listViews/All_Services.listView-meta.xml
<ListView>
    <fullName>All_Services</fullName>
    <columns>NAME</columns>
    <columns>Program__c</columns>
    <columns>Program_Area__c</columns>
    <columns>Service_Entity__c</columns>
    <columns>Service_Type__c</columns>
    <columns>Service_Area__c</columns>
    <columns>Measurement_Unit__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Services</label>
</ListView>